# cronos-cli

./: .gitignore  Makefile  README.md  pyproject.toml
src/cronos_cli/: __main__.py  app.py  app.tcss  controller.py  models.py  storage.py  ui_helpers.py  widgets.py
tests/: test_controller.py  test_models.py  test_storage.py
